# ai-micro-mcp-admin

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.mac  Makefile  docker-compose.mac.yml  docker-compose.nvidia.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
app/: main.py
app/core/: auth.py  config.py  database.py  permissions.py
app/dependencies/: auth.py
app/routers/: mcp.py
app/services/: collection_summary.py  kb_summary.py  mcp_server.py  vector_search.py
tests/: conftest.py
tests/unit/core/: test_permissions.py
