[tool.poetry]
name = "ai-micro-mcp-admin"
version = "1.0.0"
description = "MCP Admin Service - Knowledge Base Chat with Vector Search"
authors = ["AI Micro Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Dependencies are managed via requirements.txt for Docker compatibility

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require external services)",
]
